Style: Subheaders height

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -10,3 +10,13 @@ html,
   background-color: primary;
   
 }
+
+.v-subheader {
+  height: 18px;
+  font-weight: 600;
+  
+}
+
+.theme--light.v-subheader {
+  color: #BABFC7
+}
